# HL-Rally

./: CMakeLists.txt  LICENSE  README.md
cl_dll/: Copy of StudioModelRenderer.cpp  GameStudioModelRenderer.cpp  Rally_Effects.cpp  Rally_Effects.h  StudioModelRenderer.cpp  StudioModelRenderer.h  battery.cpp  cdll_int.cpp  chasecam.cpp  cl_dll.dsp  cl_dll.ncb  cl_dll.opt  cl_dll.plg  cl_dll.rar  cl_dll.sln  cl_dll.vcproj  cl_util.h  death.cpp  entity.cpp  ev_hldm.cpp  ev_hldm.h  eventscripts.h  glapi.cpp  health.cpp  hud.cpp  hud.h  hud_redraw.cpp  hud_spectator.cpp  hud_spectator.h  in_camera.cpp  input.cpp  inputw32.cpp  message.cpp  overview.cpp  player.cpp  rally_extern.h  rally_fmod.cpp  rally_fmod.h  rally_hud_health.cpp  rally_hud_radar.cpp  (+31 more)
common/: Rally_AntiHaxor.cpp  Rally_AntiHaxor.h  Rally_Bmp.cpp  Rally_CRC.cpp  Rally_CRC.h  Rally_CryptFile.cpp  Rally_CryptFile.h  carinfo.cpp  carinfo.h  com_model.h  mmgr.cpp  mmgr.h  nommgr.h  r_efx.h  rally_zlib.cpp  rally_zlib.h
dlls/: CMakeLists.txt  Makefile  Rally_CryptMessage.cpp  Rally_CryptMessage.h  animating.cpp  animation.cpp  cbase.cpp  cbase.h  cdll_dll.h  client.cpp  client.dsp  client.h  client.ncb  client.opt  client.plg  combat.cpp  doors.cpp  effects.cpp  enginecallback.h  extdll.h  func_break.cpp  game.cpp  game.h  gamerules.cpp  gamerules.h  genericmonster.cpp  globals.cpp  h_ai.cpp  h_cycler.cpp  h_export.cpp  healthkit.cpp  hl.dsp  hl.ncb  hl.opt  hl.plg  hl.sln  hl.vcproj  items.cpp  lights.cpp  maprules.cpp  (+34 more)
dlls/Debug/: hl.exp  hl.lib  vc60.idb
dlls/debughl/: hl.pch  vc60.idb
(+210 files in other folders)
